--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5px;
+  justify-content: space-evenly;
+}
+.item {
+  margin: 5px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
