refactoring css to be material UI styling, cleaned up UI for SignUp page.  Changed background color from black to dark grey so that a drop shadow can be added behind cards to make them look better.  Testimonial font size and layout cleaned up.  Dollar sign added to product prices

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -9,7 +9,7 @@
     /* width: 100vw; */
     min-height: 100vh;
     padding: 5rem calc((100vw - 1300px) / 2);
-    background: #150f0f;
+    background: #383434;
     color: #fff;
 }
 
